syntax = "proto3";

package go.micro.service.events;

service Events {
  rpc Create(CreateRequest) returns (CreateResponse) {};
  rpc Read(ReadRequest) returns (ReadResponse) {};
}

enum EventType {
  Unknown = 0;
  BuildStarted = 1;
  BuildFinished = 2;
  BuildFailed = 3;
  SourceCreated = 4;
  SourceUpdated = 5;
  SourceDeleted = 6;
}

message Event {
  string id = 1;
  string environment_id = 2;
  EventType type = 3;
  int64 created = 4;
  map<string, string> metadata = 5;
}

message CreateRequest {
  string environment_id = 1;
  EventType type = 2;
  map<string, string> metadata = 3;
}

message CreateResponse {}

message ReadRequest {
  string event_id = 1;
  string environment_id = 2;
}

message ReadResponse {
  repeated Event events = 1;
}
